[tool.poetry]
name = "hello-pulsar"
version = "0.1.0"
description = ""
authors = ["Jessica Chiang <jessica.chiang@naxgrp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pulsar = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
